<resources>
    <string name="app_name">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="plusmin">+/-</string>
    <string name="percent">%</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="times">×</string>
    <string name="division">÷</string>
    <string name="point">﮳</string>
    <string name="sqrt">√</string>
    <string name="floor">Floor</string>
    <string name="ceil">Ceil</string>
    <string name="round">Round</string>
</resources>